# ID1217-HW

Homework 1/8queens_para/: CMakeLists.txt  main.c
Homework 2/: CMakeLists.txt  main.cpp
Homework 3/: CMakeLists.txt  main.cpp
Homework 5/dist_pairing/: CMakeLists.txt  main.c
Homework 5/philosophers/: CMakeLists.txt  main.c
